tests/baselines/reference/cloduleWithDuplicateMember1.errors.txt
==== tests/cases/compiler/cloduleWithDuplicateMember1.ts (5 errors) ====
    class C {
        get x() { return 1; }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return '';
        }
        static foo() { }
    }
    
    module C {
        export var x = 1;
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    module C {
        export function foo() { }
                        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
        export function x() { }
                        ~
!!! error TS2300: Duplicate identifier 'x'.
    }